<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
    <EditText
        android:id="@+id/EditTextName"
        style="@style/ContactEditTextView"
        android:layout_width="match_parent"
        android:ems="10"
        android:hint="@string/edittext_name_hint"
        android:imeOptions="actionNext"
        android:inputType="textCapWords|textPersonName" />
    
	<EditText
	    android:id="@+id/EditTextPhone"
	    style="@style/ContactEditTextView"
	    android:hint="@string/edittext_phone_hint"
	    android:imeOptions="actionNext"
	    android:inputType="text|phone" >

        <requestFocus />
    </EditText>

	<EditText
	    android:id="@+id/EditTextEmail"
	    style="@style/ContactEditTextView"
	    android:layout_width="match_parent"
	    android:ems="10"
	    android:hint="@string/edittext_email_hint"
	    android:imeOptions="actionNext"
	    android:inputType="text|textEmailAddress" />

	<EditText
	    android:id="@+id/EditTextAddress1"
	    style="@style/ContactEditTextView"
	    android:layout_width="match_parent"
	    android:ems="10"
	    android:hint="@string/edittext_address1_hint"
	    android:imeOptions="actionNext"
	    android:inputType="text|textPostalAddress" />

	<EditText
	    android:id="@+id/EditTextAddress2"
	    style="@style/ContactEditTextView"
	    android:layout_width="match_parent"
	    android:ems="10"
	    android:hint="@string/edittext_address2_hint"
	    android:imeOptions="actionNext"
	    android:inputType="text|textPostalAddress" />

	<Button
	    android:id="@+id/addressSaveButton"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:onClick="addressSaveButton_OnClick"
	    android:text="@string/button_save" />
    
	</LinearLayout>
	
</ScrollView>
